# yt-thumbnail-analyzer

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: database.py  main.py
backend/app/crud/: __init__.py  thumbnail.py
backend/app/models/: __init__.py  thumbnail.py
backend/app/routers/: __init__.py  thumbnail.py
backend/app/schemas/: __init__.py  thumbnail.py
database/: seeds.sql
frontend/: Dockerfile  README.md  bun.lockb  components.json  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: fetchThumbnails.ts  index.ts  uploadThumbnail.ts
frontend/src/components/: EmojiRating.tsx  Gallery.tsx  LoadingCard.tsx  LoadingGallery.tsx  ResultCard.tsx  UploadThumbnail.tsx  index.ts
frontend/src/components/ui/: form.tsx  input.tsx  separator.tsx  toast.tsx
frontend/src/types/: Thumbnail.ts
